--- a/football_login1.html
+++ b/football_login1.html
@@ -40,7 +40,7 @@
                             </li>
                             <!--about-->
                             <li class="nav-item px-xl-5 px-3">
-                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="about_us.html">About</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="about_us_login.html">About</a>
                             </li>
                             <!--contacts-->
                             <li class="nav-item px-xl-5 px-3">
