--- a/favorite_player.html
+++ b/favorite_player.html
@@ -17,7 +17,7 @@
     <style></style>
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <!-- .................Home Page Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
@@ -68,7 +68,64 @@
                                 <span class="text-dark"> <strong>Adailiya </strong> </span>
                             </a>
                             <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
-                            <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+
+                            <!-- notification drop down -->
+                            <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
+                                <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+                            </a>
+                            <div class="col-4 dropdown-menu bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                                <h4 class="ml-5 mt-3 mb-5">
+                                    <strong class="fg_green-s">Notification</strong>
+                                </h4>
+
+                                <h5 class="ml-5">
+                                    <strong>Today</strong>
+                                </h5>
+                                <a class="dropdown-item bg-white py-4" href="#">
+                                    <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                        <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
+                                        </br><span class="ml-5">1m ago</span>
+                                    </div>
+                                </a>
+
+                                <hr class="goalkeeper_margin_b mt-0 mb-0" />
+
+                                <a class="dropdown-item bg-white py-4" href="#">
+                                    <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                        <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
+                                        </br><span class="ml-5">1m ago</span>
+                                    </div>
+                                </a>
+                                <a class="dropdown-item py-4" href="#">
+                                    <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                        <strong class="fg_green-s ml-2">Themer</strong> <span> sent you a message.</span>
+                                        </br><span class="ml-5">2m ago</span>
+                                    </div>
+                                </a>
+                                <h5 class="ml-5">
+                                    <strong>Yesterday</strong>
+                                </h5>
+                                <a class="dropdown-item py-4" href="#">
+                                    <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                        <strong class="fg_green-s ml-2">Themer</strong> <span> sent you a message.</span>
+                                        </br><span class="ml-5">6:00 pm</span>
+                                    </div>
+                                </a>
+
+                                <div class="dropdown-divider"></div>
+
+                                <a class="dropdown-item py-4" href="#">
+                                    <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                        <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
+                                        </br><span class="ml-5">2:00 pm</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -95,7 +152,7 @@
                         <div class="col-12 text-left py-2">
                             <h2>Players <span> (50) </span> </h2>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
@@ -124,37 +181,39 @@
                                         <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Age(years)</span>
                                             <br>
-                                            <span class="ft_17px-s">28</span>
+                                            <span class="fs_12px-s">28</span>
                                         </div>
-                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Matches</span>
                                             <br>
-                                            <span class="ft_17px-s">15</span>
+                                            <span class="fs_12px-s">15</span>
                                         </div>
-                                        <div class="col-3 text-white px-3 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
-                                            <span class="ft_17px-s">2</span>
+                                            <span class="fs_12px-s">2</span>
                                         </div>
-                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
-                                            <span class="ft_size_14px-s">Defender</span>
+                                            <span class="fs_12px-s">Defender</span>
                                         </div>
                                     </div>
                                     <hr class="goalkeeper_margin_b" />
 
                                     <div class="aditya_location">
                                         <p>
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send invitation >> </span>
+                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                                <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
+                                                <span class="pull-right text-white mt-2"> send invitation >> </span>
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
@@ -183,30 +242,32 @@
                                         <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Age(years)</span>
                                             <br>
-                                            <span class="ft_17px-s">28</span>
+                                            <span class="fs_12px-s">28</span>
                                         </div>
-                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Matches</span>
                                             <br>
-                                            <span class="ft_17px-s">15</span>
+                                            <span class="fs_12px-s">15</span>
                                         </div>
-                                        <div class="col-3 text-white px-3 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
-                                            <span class="ft_17px-s">2</span>
+                                            <span class="fs_12px-s">2</span>
                                         </div>
-                                        <div class="col-3 text-white px-2 ft_size_14px-s">
+                                        <div class="col-3 text-white px-1 ft_size_14px-s">
                                             <span class="opacity_4-s">Missed</span>
                                             <br>
-                                            <span class="ft_size_14px-s">Defender</span>
+                                            <span class="fs_12px-s">Defender</span>
                                         </div>
                                     </div>
                                     <hr class="goalkeeper_margin_b" />
 
                                     <div class="aditya_location">
                                         <p>
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send invitation >> </span>
+                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                                <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
+                                                <span class="pull-right text-white mt-2"> send invitation >> </span>
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
