--- a/filter_by_distance.html
+++ b/filter_by_distance.html
@@ -19,14 +19,14 @@
 
     <!-- Modal -->
     <div class="modal fade" id="filter_by_distance_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered ">
+        <div class="modal-dialog modal-lg modal-dialog-centered ">
             <div class="modal-content br_10px-s border-0">
                 <div class="modal-header bg_grey-s bg_filter_img-s border-0 br_up_left_right_10px-s">
                     <h5 class="modal-title text-dark" id="view-head"><strong>Filter By Distance</strong></h5>
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-xl-8 col-lg-6 col-12 order-lg-1 order-2">
+                        <div class="col-xl-6 col-lg-6 col-12 order-lg-1 order-2">
                             <form action="">
                                 <div class="row py-5">
                                     <div class="col-12">
@@ -44,68 +44,70 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-4 col-lg-6 col-12 order-lg-2 order-1">
+                        <div class="col-xl-6  col-lg-6 col-12 order-lg-2 order-1">
                             <!-- <div class="col-lg-4 col-md-6 mb-3"> -->
                                 
                                     <div class="container filter_location-s d-flex ">
                                         <div class=" location_card-s d-flex align-self-end pb-3 w-100">
-                                            <div class="card w-100">
+                                            <div class="card w-100 br_25px-s">
                                                 <div class="heart_icon">
-                                                    <i class="fa fa-heart-o bg_green-s fg_white-s heart_Position-s fs_32px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="container">
-                                                    <div class="row">
+                                                    <div class="row mx-auto">
                                                         <div class="col-lg-3 col-md-3 col-3">
                                                             <img src="assets/images/Group 24.png" alt="" />
                                                         </div>
-                                                        <div class="col-lg-9 col-md-9 col-9 d-flex justify-content-between">
-                                                            <div class="text-dark">
+                                                        <div class="col-lg-9 col-md-9 col-9">
+                                                            <div class="t">
                                                                 <h6 class="mb-0 fs_12px-s">Thamer</h6>
-                                                                <span class=" opacity_4-s">@thamermd</span>
-                                                                <p class="fg_yellow-s">
+                                                                <span class=" opacity_4-s fs_8px-s">@thamermd</span>
+                                                                <p class="fg_yellow-s fs_8px-s">
                                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                                     <i class="fa fa-star-o" aria-hidden="true"></i>
                                                                     <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                                    <span class="rating_textt"> $10 </span>
                                                                 </p>
-                                                                <div>
-                                                                    <span class="text-dark fs_12px-s"> $10 </span>
-                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="row pt-4">
-                                                        <div class="col-3 text-dark px-1 ft_size_14px-s">
+                                                    <div class="row mx-auto pt-4">
+                                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                             <span class="opacity_4-s">Age(years)</span>
                                                             <br>
-                                                            <span class="ft_17px-s">28</span>
+                                                            <span class="fs_12px-s">28</span>
                                                         </div>
-                                                        <div class="col-3 text-dark px-1 ft_size_14px-s">
+                                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                             <span class="opacity_4-s">Matches</span>
                                                             <br>
-                                                            <span class="ft_17px-s">15</span>
+                                                            <span class="fs_12px-s">15</span>
                                                         </div>
-                                                        <div class="col-3 text-dark px-1 ft_size_14px-s">
+                                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                             <span class="opacity_4-s">Missed</span>
                                                             <br>
-                                                            <span class="ft_17px-s">2</span>
+                                                            <span class="fs_12px-s">2</span>
                                                         </div>
-                                                        <div class="col-3 text-dark px-1 ft_size_14px-s">
+                                                        <div class="col-3 text-white text-center px-0 fs_12px-s">
                                                             <span class="opacity_4-s">Missed</span>
                                                             <br>
-                                                            <span class="ft_size_14px-s">Defender</span>
+                                                            <span class="fs_12px-s">Defender</span>
                                                         </div>
                                                     </div>
-                                                    <hr class="goalkeeper_margin_b" />
+                                                    <hr class="goalkeeper_margin_b mx-3" />
                 
-                                                    <div class="aditya_location">
-                                                        <p>
-                                                            <a class="td_none-s text-dark" href="Home/home-sent-invitation.html">
+                                                    <div class="row mx-auto aditya_location">
+                                                        <div class="col-6">
+                                                            <p class="fs_12px-s">
                                                                 <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                                                <span class="pull-right text-dark"> send invitation >> </span>
+                                                            </p>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                                                <span class="pull-right text-white mt-2"> send invitation >> </span>
                                                             </a>
-                                                        </p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
