--- a/more.html
+++ b/more.html
@@ -30,32 +30,32 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
-                                <li class="nav-item ml-lg-0 ml-2">
-                                    <a class="nav-link pl-lg-0" href="index.html">
-                                        <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
+                            <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
+                                <li class="nav-item ml-2">
+                                    <a class="nav-link nav_link_active-d active" href="index.html">
+                                        <img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home" /> Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="chat.html">
-                                        <span><img src="assets/images/chat.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="favorite_player.html">
-                                        <span><img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> </span> Favorites
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="game_invitation.html">
-                                        <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
+                                    <a class="nav-link nav_link_active-d" href="chat.html">
+                                        <img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /> Chat
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="more.html">
-                                        <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
+                                    <a class="nav-link nav_link_active-d" href="favorite_player.html">
+                                        <img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> Favorites
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link nav_link_active-d" href="game_invitation.html">
+                                        <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> Game Invitations
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link nav_link_active-d" href="javascript:void(0)">
+                                        <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> More
                                     </a>
                                 </li>
                             </ul>
